# advisory

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-bake.hcl  docker-compose.yml  package.json
.github/workflows/: rust.yml
backend/: Cargo.toml  Dockerfile
backend/benches/: organziation_generation.rs
backend/spec/: insomnia_file.json  openapi_spec.yaml
backend/src/: auth.rs  main.rs
backend/src/handlers/: advisories.rs  info.rs  people.rs
backend/src/lib/: database.rs  forms.rs  lib.rs  query.rs  settings.rs  user_id.rs  weights.rs
backend/src/lib/advisories/: advisory.rs  advisory_group.rs  builder.rs  organization.rs  settings.rs  weights.rs
backend/src/lib/forms/: advisory.rs  delete.rs  student.rs  students.rs  teacher.rs  teachers.rs  uid.rs
backend/src/lib/people/: grade.rs  person.rs  sex.rs  student.rs  teacher.rs
backend/src/tests/: adding_people.rs  advisory_building.rs  auth_test.rs  info_handlers.rs
frontend/: .eslintrc.yml  .gitignore  .prettierignore  .prettierrc.toml  Cargo.toml  Dockerfile  index.html  nginx-conf.conf  package.json  playwright.config.ts  svelte.config.js  tsconfig.json  vite.config.js  vite.config.ts
frontend/src/: App.svelte  app.html  main.rs
frontend/src/lib/: API.ts  Advisory.svelte  AdvisoryWindow.svelte  BottomBar.svelte  Button.svelte  DBTypes.ts  Horizontal-Rule.svelte  Input.svelte  LabeledNumberField.svelte  Logo.svelte  Name.svelte  SideBar.svelte  StudentCard.svelte  TableParsing.ts  TopBar.svelte  auth_store.ts
frontend/src/routes/: +page.svelte
frontend/src/routes/confirmation/: +page.svelte
frontend/src/routes/conn_test/: +page.svelte
frontend/src/routes/dashboard/: +page.svelte
frontend/src/routes/password_reset/: +page.svelte
frontend/src/routes/signup/: +page.svelte
frontend/src/theme/: _smui-theme.scss
frontend/static/: smui.css
src/: main.rs
src/handlers/: advisories.rs  people.rs
