[package]
name = "advisory"
version = "0.1.0"
authors = ["Grant Lemons"]
repository = "https://github.com/grantlemons/advisory"
license = "GPL-3.0-only"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.47.0"
aws-sdk-neptune = "0.17.0"
axum = "0.5.15"
axum-server = { version = "0.4.2", features = ["tls-rustls"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.20.1", features = ["full"] }
tracing = "0.1.36"
