[package]
name = "advisory-backend"
version = "0.1.0"
authors = ["Grant Lemons"]
repository = "https://github.com/grantlemons/advisory"
license = "GPL-3.0-only"
readme = "README.md"
publish = false
edition = "2021"

[dependencies]
axum = { version = "0.5.15", features = ["form"] }
axum-macros = "0.2.3"
axum-server = { version = "0.4.2", features = ["tls-rustls"] }
chrono = "0.4.22"
fern = { version = "0.6.1", features = ["chrono", "colored"] }
jsonwebtoken = "8.1.1"
log = "0.4.17"
neo4rs = { git = "https://github.com/grantlemons/neo4rs" }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.20.1", features = ["full"] }

[[bin]]
name = "advisory-backend"
path = "src/main.rs"
