[package]
name = "frontend"
version = "0.1.0"
authors = ["Grant Lemons"]
repository = "https://github.com/grantlemons/advisory"
license = "GPL-3.0-only"
readme = "README.md"
publish = false
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backend = { path = "../backend" }
